Fix navbar logo not visible outside homepage hero (#161)

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -93,24 +93,21 @@ body {
 
 .logo {
   padding-right: 1.15rem;
-  max-width: 180px;
+  width: 180px;
+  min-width: 180px;
 
-  .logo-white,
-  .logo-colour {
+  .logo-white {
     display: none;
     width: 100%;
     max-width: 180px;
     height: auto;
   }
 
-  .light-theme & {
-    .logo-white {
-      display: none;
-    }
-    .logo-colour {
-      max-width: 185px;
-      display: block;
-    }
+  .logo-colour {
+    display: block;
+    width: 100%;
+    max-width: 185px;
+    height: auto;
   }
 
   .dark-theme & {
